# non-empty-string

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: coverage.yml  generic.yml  grcov.yml  release-plz.yml
src/: error.rs  lib.rs  macros.rs  schemars_support.rs  serde_support.rs
src/trait_impls/: delegated_traits.rs  mod.rs
